--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
   <string name="app_name">Saymyname</string>
   <string name="action_settings">Settings</string>
+  <string name="clarifai_api_key">@string/clarifai_api_key_secret</string>
+  <string name="clarifai_model_id">@string/clarifai_model_id_secret</string>
 </resources>
