--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
   <string name="app_name">Saymyname</string>
   <string name="action_settings">Settings</string>
   <string name="clarifai_api_key">@string/clarifai_api_key_secret</string>
+  <string name="yandex_api_key">@string/yandex_api_key_secret</string>
   <string name="clarifai_model_id">@string/clarifai_model_id_secret</string>
 </resources>
