--- a/saymyname-app/src/main/res/values/strings.xml
+++ b/saymyname-app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
   <string name="app_name">Saymyname</string>
+
   <string name="action_settings">Settings</string>
+  <string name="action_achievements">Achievements</string>
+  <string name="action_tutorial">Tutorial</string>
+  <string name="action_upgradedonate">Upgrade / Donate</string>
+  <string name="action_opensource">Open Source</string>
+  <string name="action_about">About</string>
+  <string name="action_helpfeedback">Help &amp; Feedback</string>
+
   <string name="clarifai_api_key">@string/clarifai_api_key_secret</string>
   <string name="yandex_api_key">@string/yandex_api_key_secret</string>
   <string name="clarifai_model_id">@string/clarifai_model_id_secret</string>
