--- a/saymyname-app/src/main/res/values/strings.xml
+++ b/saymyname-app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
   <string name="clarifai_model_id">@string/clarifai_model_id_secret</string>
 
   <string name="dialog_alert_permission_camera">In order to take photos with the app, you must enable access to the camera.\n Navigate to the System Settings or just tap here</string>
+  <string name="dialog_alert_permission_storage">Storage permission is needed to save taken photos on your device,\n so that you can see previously taken photos.</string>
 
 </resources>
